fixed overflow issue

--- a/web/src/styles/general.scss
+++ b/web/src/styles/general.scss
@@ -13,6 +13,6 @@ body {
   #app {
     width: 100vw;
     height: 100vh;
-    overflow: auto;
+    overflow: hidden;
   }
 }
